# ComfyUI-Inochi2d

./: .gitattributes  .gitignore  README.md  __init__.py  fix_comfyui_inochi2d.sh  node_list.json  nodes.py  pyproject.toml  requirements.txt  restore_git.sh  test_comfyui_inochi2d.py
.github/workflows/: ci.yml  wheels.yml
core/: __init__.py  assets_manager.py  parameters.py  renderer.py
examples/: personaje_workflow.py  workflow.json
